# godocs

./: MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
examples/: example_plugin.py  md_translator.py
godocs/: __init__.py  __main__.py  context_creator.py  doc_constructor.py  doc_parser.py  filters.py  xml_parser.py
godocs/ast/: abstract_syntax_node.py  abstract_syntax_tag_node.py  abstract_syntax_text_node.py
godocs/constructor/: __init__.py  constructor.py
godocs/constructor/jinja_constructor/: __init__.py  jinja_constructor.py
godocs/constructors/: doc_constructor.py
godocs/parser/: __init__.py  context_creator.py  xml_parser.py
godocs/templates/rst/: class_reference.rst  constant_descriptions.jinja  constant_descriptions.rst  description.jinja  heading.rst  method_descriptions.jinja  method_index.rst  property_index.rst  ref.rst
godocs/translation/: __init__.py
godocs/translation/ast/: __init__.py  abstract_syntax_node.py  abstract_syntax_tag_node.py  abstract_syntax_text_node.py
godocs/translation/interpreters/: __init__.py  bbcode_syntax_interpreter.py  syntax_interpreter.py
godocs/translation/translators/: __init__.py  rst_syntax_translator.py  syntax_translator.py
godocs/util/: __init__.py  util.py
src/godocs/: __init__.py  cli.py
src/godocs/cli/: __init__.py  contruct.py  jinja.py  main.py
src/godocs/constructor/: __init__.py  constructor.py  mapper.py
src/godocs/parser/: __init__.py  context_creator.py  types.py  (+1 more)
tests/: test_util.py
tests/parser/: test_context_creator.py  test_xml_parser.py
tests/util/: test_dir.py
(+46 files in other folders)
