[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "godocs"
version = "0.0.1"
authors = [
  { name="Daniel Sousa (nadjiel)", email="oliveira.daaaaniel@gmail.com" },
]
description = "CLI tool for converting Godot's XML docs into RST Markdown."
keywords=[ "python", "godot", "documentation", "docs", "godocs", "sphinx", "jinja2" ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
dependencies = [
#    "requests", # Example dependency
#    "numpy>=1.20", # Example dependency with version constraint
]

[project.urls]
Homepage = "https://github.com/godocs-godot/godocs"
Issues = "https://github.com/godocs-godot/godocs/issues"
